--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,10 @@
 {
   "manifest_version": 3,
   "name": "Verkadalizer",
-  "version": "2.0",
+  "version": "2.0.0",
   "description": "Automatically processes food menu images from Verkada Menu pages using OpenAI's API to create beautiful, appetizing visualizations.",
+  "author": "Ivan Seredkin",
+  "homepage_url": "https://github.com/siropkin/verkadalizer",
   "permissions": [
     "activeTab",
     "storage"
@@ -25,14 +27,14 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
+      "16": "icon16.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
     }
   },
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   }
 }
