--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Verkadalizer",
-  "version": "3.0.0",
-  "description": "Transforms Verkada Menu images into AI-powered food visualizations using OpenAI or Google Gemini. Click the button on any menu image.",
+  "version": "3.5.0",
+  "description": "Transforms Verkada Menu images into AI-powered food visualizations using OpenAI or Google Gemini.",
   "author": "Ivan Seredkin",
   "homepage_url": "https://github.com/siropkin/verkadalizer",
   "permissions": [
